# cosmo-stats

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/cosmo_stats/: __init__.py  enums.py  main.py  signals.py
src/cosmo_stats/clients/: apollo_client.py  models.py
src/cosmo_stats/commands/: constants.py  objekts.py
src/cosmo_stats/enums/: artms.py  cosmo.py  idntt.py  triples.py
src/cosmo_stats/objekts/: commands.py  models.py  service.py  utils.py
src/objekt_stats/: __init__.py  enums.py
src/objekt_stats/clients/: apollo_client.py  models.py
src/objekt_stats/enums/: artms.py  cli.py  cosmo.py  idntt.py  triples.py
src/objekt_stats/objekts/: models.py  service.py
tests/unit/client/: test_apollo_client.py
tests/unit/objekts/: test_commands.py
