[project]
name = "cosmo-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hillary Chan", email = "hillary.chan91@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
]

[project.scripts]
cosmo-stats = "cosmo_stats:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
    "types-requests>=2.32.0.20250328",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # any-type
    "COM812", # missing-trailing-comma (avoid unexpected behaviour with formatter)
    "T201",   # print

    # Disable rules related to missing docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention= "google"
