[project]
name = "cosmo-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hillary Chan", email = "hillary.chan91@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "typer>=0.19.2",
]

[project.scripts]
cosmo-stats = "cosmo_stats.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
    "types-requests>=2.32.0.20250328",
]

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # any-type
    "COM812", # missing-trailing-comma (avoid unexpected behaviour with formatter)
    "FBT001", # boolean-type-hint-positional-argument
    "FBT002", # boolean-default-value-positional-argument
    "T201",   # print

    # Disable rules related to missing docstrings
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]

[tool.ruff.lint.pydocstyle]
convention= "google"
